Resources/CSS/style.css
/* -------------------------------- */
/* BASIC SETUP */
/* -------------------------------- */
*{
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
}
html,
body {
    background-color: #fff;
    color: #555;
    font-family: 'Lato', sans-serif;
    font-size: 20px;
    font-weight: 300;
    text-rendering: optimizeLegibility;
    overflow-x: hidden;
    scroll-behavior: smooth;
}
.clearfix { zoom: 1;}
.clearfix:after { /*clears float after an element, in this case li elements have the float properties*/
    content: '.';
    clear: both;
    display: block;
    height: 0;
    visibility: hidden;
}
/* -------------------------------- */
/* REUSABLE COMPONENTS */
/* -------------------------------- */
.row {
    max-width: 1140px;
    margin: 0 auto;
}
section {
    padding: 80px 0;
}
.box {
    padding: 1%;
}

/* ------- HEADINGS ------- */
h1, 
h2, 
h3 {
    font-weight: 300;
    text-transform: uppercase;
}
h1 {
    margin-top: 0;
    margin-bottom: 20px;
    color: #fff;
    font-size: 240%;
    word-spacing: 4px;
    letter-spacing: 1px;
}
h2 {
    font-size: 180%;
    word-spacing: 2px;
    text-align: center;
    margin-bottom: 30px;
    letter-spacing: 1px;
}
h3 {
    font-size: 110%;
    margin-bottom: 15px;
}
h2:after {
    display: block;
    height: 2px;
    background-color: #44bd32;
    content: " ";
    width: 100px;
    margin: 0 auto;
    margin-top: 30px;
}
h4 { display: none;}

/* ------- PARAGRAPHS ------- */
.long-copy {
    line-height: 145%;
    width: 70%;
    margin-left: 15%;
}
.box p {
    line-height: 145%;
    font-size: 90%;
}
/* ------- LINKS ------- */
a:link,
a:visited {
    text-decoration: none;
    border-bottom: 2px #44bd32 solid;
    padding-bottom: 4px;
    color: #555;
    -webkit-transition: border-bottom 0.2s;
    transition: border-bottom 0.2s;
    
}
a:hover,
a:active {
    color: #555;
    border-bottom: 1px solid transparent;
}

/* ------- ICONS ------- */
.icon-big {
    font-size: 350%;
    display: block;
    color: #44bd32;
    margin-bottom: 8px;
}
.icon-small {
    display: inline-block;
    width: 30px;
    text-align: center;
    color: #44bd32;
    font-size: 120%;
    margin-right: 10px;
    float: left;
    
    /*secrets to align text and icons*/
    line-height: 120%;
    vertical-align: middle;
    margin-top: 8px;
}

/* ------- BUTTONS ------- */
.button:link, 
.button:visited,
input[type=submit] {
    display: inline-block;
    padding: 10px 30px;
    font-weight: 300;
    text-decoration: none;
    border-radius: 200px;
    -webkit-transition: background-color 0.3s, color 0.3s, border 0.3s;
    transition: background-color 0.3s, color 0.3s, border 0.3s;
}

.b-full:link, 
.b-full:visited, 
input[type=submit] {
    background-color: #44bd32;
    border: 1px solid #44bd32;
    color: #fff;
    margin-right: 15px;
}
.b-ghost:link, 
.b-ghost:visited {
    border: 1px solid #44bd32;
    color: #44bd32;
}
.button:hover, 
.button:active, 
input[type=submit]:hover, 
input[type=submit]:active {
    background-color: #369527;
}
.b-full:hover, 
.b-full:active {
    background-color: #369527;
    border: 1px solid #44bd32;
    color: #fff;
}
.b-ghost:hover, 
.b-ghost:active {
    border: 1px solid #369527;
    color: #fff;
}

/* -------------------------------- */
/* HEADER */
/* -------------------------------- */

header {
    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0,0,0, 0.8)),to(rgba(0,0,0, 0.8)));
    background-image: linear-gradient(rgba(0,0,0, 0.8),rgba(0,0,0, 0.8)), url(/Resources/CSS/img/hero.jpg);
    background-size: cover;
    background-position: center;
    height: 100vh;
    background-attachment: fixed;
    
}
.hero-text-box {
    position: absolute;
    width: 1140px;
    left: 50%; 
    top: 50%;
    -webkit-transform: translate(-50%,-50%);
            transform: translate(-50%,-50%);
}
.title {
    width: 100%;
    font-weight: bold;
    letter-spacing: 2px;
    margin: 0;
    font-size: 300%;
    
}
.subtitle {
    position: relative;
    font-size: 180%;
}
.logo {
    height: 130px;
    width: auto;
    margin-top: 10px;
    float: left;
}
.logo-black {  
    height: 60px;
    width: auto;
    margin: 0;
    float: left;
    display: none;
}

.main-nav {
    float: right;
    list-style: none;
    margin-top: 55px;
}
.main-nav li {
    display: inline-block; /*makes it side by side*/
    margin-left: 40px;
}
.main-nav li a:link, 
.main-nav li a:visited {
    padding: 8px 0;
    color: #fff;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 90%;
    border-bottom: 4px solid transparent;
    -webkit-transition: border-bottom 0.3s;
    transition: border-bottom 0.3s;
}
.main-nav li a:hover, 
.main-nav li a:active {
    border-bottom: 2px solid #44bd32;
}

.mobile-nav-icon {
    float: right;
    margin-top: 30px;
    cursor: pointer;
    display: none;
}
.mobile-nav-icon ion-icon {
    font-size: 200%;
    color: #fff;
}

/* Sticky nav */
.sticky {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: rgba(255,255,255, 0.95);
    box-shadow: 0 2px 1px #efefef;
    z-index: 9999;
}
.sticky .main-nav li a:link, 
.sticky .main-nav li a:visited {
    padding: 5px 0;
    color: #555;
}
.sticky .main-nav {
    margin-top: 20px;
}
.sticky .logo { display: none; }
.sticky .logo-black { display: block; }

/* -------------------------------- */
/* FEATURES */
/* -------------------------------- */
.section-features .long-copy {
    margin-bottom: 30px;
}

/* -------------------------------- */
/* MEALS */
/* -------------------------------- */

.section-meals {
    padding: 0;
}
.meals-showcase {
    list-style: none;
    width: 100%;
}
.meals-showcase li {
    display: block;
    float: left;
    width: 25%; /*100/4 because there are four pictures per list*/
}
.meal-photo {
    width: 100%;
    margin: 0;
    overflow: hidden; /*for transform property so it doesn't stretch out of browser*/
    background-color: #000;

}
.meal-photo img {
    opacity: 0.7;
    width: 100%;
    height: auto;
    -webkit-transform: scale(1.15);
            transform: scale(1.15);
}
.meal-photo img:hover {
    -webkit-transform: scale(1.05);
            transform: scale(1.05);
    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
    transition: opacity 0.5s, -webkit-transform 0.5s;
    transition: transform 0.5s, opacity 0.5s;
    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
    opacity: 1;
}
/* -------------------------------- */
/* HOW IT WORKS */
/* -------------------------------- */
.section-steps {
    background-color: #f4f4f4;
}
.steps-box:first-child {
    text-align: right;
    padding-right: 3%;
    margin-top: 30px;
}
.steps-box:last-child {
    padding-left: 3%;
    margin-top: 70px;
}
.app-screen {
    width: 40%;
}
.works-step {
    margin-bottom: 45px;
}
.works-step:last-of-type {
    margin-bottom: 80px;
}

.works-step div {
    color: #44bd32;
    border: solid 2px #44bd32;
    display: inline-block;
    border-radius: 50%;
    height: 55px;
    width: 55px;
    text-align: center;
    padding: 8px;
    float: left;
    font-size: 150%;
    margin-right: 25px;
}
.button-app img{
    height: 50px;
    width: auto;
    margin-right: 10px;
}
.button-app:link,
.button-app:visited {
    border: 0;
}
/* -------------------------------- */
/* CITIES */
/* -------------------------------- */
.box img {
    width: 100%;
    height: auto;
    margin-bottom: 15px;
}
.city-feature {
    margin-bottom: 5px;
    margin-left: 0px;
}
/* -------------------------------- */
/* TESTIMONIALS */
/* -------------------------------- */
.section-testimonials {
    background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0,0,0, 0.8)),to(rgba(0,0,0, 0.8))),url(img/back-customers.jpg);
    background-image: linear-gradient(rgba(0,0,0, 0.8),rgba(0,0,0, 0.8)),url(img/back-customers.jpg);
    background-size: cover;
    color: #fff;
    background-attachment: fixed;
}

blockquote {
    padding: 2%;
    font-style: italic;
    line-height: 145%;
    position: relative;
}
cite {
    font-size: 90%;
    margin-top: 25px;
    display: block;
}
blockquote:before {
    content: "\201C";
    font-size: 400%;
    display: block;
    position: absolute;
    top: -5px;
    left: -10px;
}
cite img {
    height: 45px;
    border-radius: 50%;
    margin-right: 10px;
    vertical-align: middle;
}

/* -------------------------------- */
/* MEAL PlANS */
/* -------------------------------- */
.section-plans {
    background-color: #f4f4f4;
}

.plan-box {
    background-color: #fff;
    border-radius: 5px;
    width: 90%;
    margin-left: 5%;
    -webkit-box-shadow: 0 2px 2px #efefef;
            box-shadow: 0 2px 2px #efefef;
}

.plan-box div {
    padding: 15px;
    border-bottom: 1px solid #e8e8e8;
}

.plan-box div:first-child {
    background-color: #fcfcfc;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.plan-box div:last-child {
    text-align: center;
    border: 0;
}

.plan-price {
    font-size: 300% !important;
    margin-bottom: 10px;
    font-weight: 300;
    color: #44bd32;
}

.plan-price span {
    font-size: 30%;
    font-weight: 300;
}

.plan-price-meal {
    font-size: 80%;
}

.plan-box ul {
    list-style: none;
}

.plan-box ul li {
    padding: 5px 0;
}


/* -------------------------------- */
/* FORMS */
/* -------------------------------- */
.contact-form {
    width: 60%;
    margin: 0 auto; /* centers contact form inside of parent element*/
}
input[type=text],
input[type=email],
select,
textarea {
    width: 100%;
    padding: 10px;
    border-radius: 5px;
    border: 1px solid #ccc;
}
textarea {
    height: 150px;
}
input[type=checkbox] {
    margin: 15px 5px 10px 0;
}
*:focus {
    outline-color: #44bd32;
}
label {
  display: block;
  margin-top: 5px;
}

/* -------------------------------- */
/* FOOTER */
/* -------------------------------- */
footer {
    background-color: #333;
    padding: 20px;
}
.footer-nav {
    list-style: none;
    float: left;
    padding-top: 15px;
}
.social-links {
    list-style: none;
    float: right;
}
.footer-nav li,
.social-links li {
    display: inline-block;
    margin-right: 20px;
}
.footer-nav li:last-child,
.social-links li:last-child {
    margin: 0;
}
.footer-nav li a:link,
.footer-nav li a:visited,
.social-links li a:link,
.social-links li a:visited {
    text-decoration: none;
    border: 0;
    color: #888;
    -webkit-transition: color 0.3s;
    transition: color 0.3s;
}
.footer-nav li a:hover,
.footer-nav li a:active {
    color: #fff; 
}

.social-links li a:link,
.social-links li a:visited {
    font-size: 200%;
}
.facebook:hover {
    color: #3b5998;
}
.instagram:hover {
    color: #517fa4;
}
.pinterest:hover {
    color: #bd081c;
}
.github:hover {
    color: #fff;
}
.github,
.facebook,
.pinterest,
.instagram {
    -webkit-transition: color 0.3s;
    transition: color 0.3s;
}

footer p {
    color: #888;
    font-size: 90%;
    text-align: center;
    margin-top: 15px;
}

/* -------------------------------- */
/* ANIMATIONS */
/* -------------------------------- */
.js--wp-1,
.js--wp-2,
.js--wp-3
{
    opacity: 0;
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
}

.js--wp-4 {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
}

.js--wp-1.animated,
.js--wp-2.animated,
.js--wp-3.animated {
    opacity: 1;
}

